--- a/hyprland.conf
+++ b/hyprland.conf
@@ -5,7 +5,7 @@ monitor=,preferred,auto,1
 source=~/.config/hypr/exec-once.conf
 source=~/.config/hypr/variables.conf
 source=~/.config/hypr/binding.conf
-source=~/.config/hypr/ruls.conf
+source=~/.config/hypr/rules.conf
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
