--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,14 +1,12 @@
-monitor=,preferred,auto,1
+monitor = DP-1, 1920x1080@60, 0x0, 1
+monitor = DP-2, 1920x1080@60, 0x0, 1
 
+# source=~/.config/hypr/configs/theme.conf
+source=~/.config/hypr/configs/exec-once.conf
+source=~/.config/hypr/configs/variables.conf
+source=~/.config/hypr/configs/binding.conf
+source=~/.config/hypr/configs/rules.conf
 
-# source=~/.config/hypr/theme.conf
-source=~/.config/hypr/exec-once.conf
-source=~/.config/hypr/variables.conf
-source=~/.config/hypr/binding.conf
-source=~/.config/hypr/rules.conf
-
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Some default env vars.
-env = XCURSOR_SIZE,24
+env = XCURSOR_SIZE,16
 
