--- a/rules.conf
+++ b/rules.conf
@@ -2,25 +2,22 @@
 # ----- Ruls -----
 # ----------------
 # Terminals & Main
-windowrule=workspace 1,konsole
 windowrule=workspace 1,kitty
+windowrule=workspace 1,alacritty
 windowrule=workspace 1,systemsettings
-windowrule=workspace 1,gnome-terminal
 # Internet
 windowrule=workspace 2,firefox
-windowrule=workspace 2,opera
-windowrule=workspace 2,edge
 windowrule=workspace 2,Chromium
 windowrule=workspace 2,Brave-browser
 # Coding
-windowrule=workspace 3,Code
-windowrule=workspace 3,VSCodium
-windowrule=workspace 3,jetbrains-pycharm-ce
+# windowrule=workspace 3,Code
+# windowrule=workspace 3,VSCodium
+# windowrule=workspace 3,jetbrains-pycharm-ce
 # Files
 windowrule=workspace 4,dolphin
 windowrule=workspace 4,pcmanfm-qt
 windowrule=workspace 4,Nemo
-windowrule=workspace 4,ark
+windowrule=workspace 4,thunar
 # Android & Database
 windowrule=workspace 5,studio
 windowrule=workspace 5,jetbrains-studio
@@ -32,8 +29,8 @@ windowrule=workspace 6,title:^(Messages for web)(.*)$
 windowrule=workspace 6,discord
 windowrule=workspace 6,thunderbird
 # Media
-windowrule=workspace 7,amarok
-windowrule=workspace 7,elisa
+windowrule=workspace 7,spoify
+windowrule=workspace 7,cava
 windowrule=workspace 7,vlc
 windowrule=workspace 7,easyeffects
 windowrule=workspace 7,mpv
